--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -47,7 +47,7 @@
     padding: 0 16px;
 }
 
-.navbar .navbar-linklist li:nth-child(1) {
+.desktop-navbar .navbar-linklist li:first-child {
     margin-right: 16px;
     padding-right: 16px;
     border-right: 2px solid rgba(0, 0, 0, .3);
@@ -60,7 +60,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    font-size: 32px;
+    font-size: 28px;
 }
 
 .navbar .navbar-mobile-menu {
